--- a/src/features/other/selectOptions/UI/styles.module.scss
+++ b/src/features/other/selectOptions/UI/styles.module.scss
@@ -9,6 +9,12 @@
   grid-auto-flow: row;
   row-gap: 15px;
   align-items: center;
+
+  .left {
+    p {
+      padding-left: 10px;
+    }
+  }
 }
 
 .parameters {
