--- a/src/features/channel/selectSymbols/UI/styles.module.scss
+++ b/src/features/channel/selectSymbols/UI/styles.module.scss
@@ -2,12 +2,27 @@
   display: grid;
   grid-template: 1fr / 0.9fr 1fr;
   align-items: center;
+}
+
+.wrapper__row {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 15px;
+  align-items: center;
+}
+
+.title {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  column-gap: 10px;
+  justify-content: start;
 
   p {
     color: var(--Personal-colors-black);
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
   }
 
@@ -24,25 +39,18 @@
       transform: translate(-50%, -50%);
     }
   }
-  .title {
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    column-gap: 10px;
-    justify-content: start;
-  }
+}
 
-  .slider {
-    display: grid;
-    grid-template: 1fr / 1fr 10fr 1fr;
-    column-gap: 15px;
+.slider {
+  display: grid;
+  grid-template: 1fr / 1fr 10fr 1fr;
+  column-gap: 15px;
 
-    p {
-      color: var(--Personal-colors-black);
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 0.75;
-    }
+  p {
+    color: var(--Personal-colors-black);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 0.75;
   }
 }
