--- a/src/features/other/selectDescription/UI/styles.module.scss
+++ b/src/features/other/selectDescription/UI/styles.module.scss
@@ -56,10 +56,25 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+      @media (max-width: 992px) {
+        font-size: 14px;
+      }
+
+      @media (max-width: 576px) {
+        font-size: 12px;
+      }
 
       &::placeholder {
-        font-size: 12px;
+        font-size: 16px;
         color: #a3a0a0;
+
+        @media (max-width: 992px) {
+          font-size: 14px;
+        }
+
+        @media (max-width: 576px) {
+          font-size: 12px;
+        }
       }
     }
 
