--- a/src/features/other/selectSex/UI/styles.module.scss
+++ b/src/features/other/selectSex/UI/styles.module.scss
@@ -9,6 +9,12 @@
   grid-auto-flow: row;
   row-gap: 15px;
   align-items: center;
+
+  .title {
+    p {
+      padding-left: 10px;
+    }
+  }
 }
 
 .title {
@@ -20,9 +26,9 @@
 
   p {
     color: var(--Personal-colors-black);
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
   }
 
