--- a/src/widgets/channel/addChannel/UI/channelDescription/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelDescription/UI/styles.module.scss
@@ -13,6 +13,18 @@
     box-shadow: 0px 4px 26px 0px rgba(0, 0, 0, 0.2);
     background: var(--Personal-colors-White);
 
+    @media (max-width: 992px) {
+      padding: 30px 40px;
+      row-gap: 40px;
+      border-radius: 30px;
+    }
+
+    @media (max-width: 576px) {
+      padding: 20px;
+      border-radius: 25px;
+      row-gap: 30px;
+    }
+
     .form__top {
       display: grid;
       grid-auto-flow: row;
@@ -22,7 +34,7 @@
     .form__bottom {
       display: grid;
       grid-auto-flow: row;
-      row-gap: 50px;
+      row-gap: 40px;
       align-items: center;
 
       .button {
@@ -49,6 +61,10 @@
   .btns__wrapper {
     display: grid;
     justify-content: center;
+
+    @media (max-width: 576px) {
+      justify-content: unset;
+    }
 
     .btns {
       display: grid;
