--- a/src/widgets/mainPages/turnkey/UI/styles.module.scss
+++ b/src/widgets/mainPages/turnkey/UI/styles.module.scss
@@ -1,12 +1,11 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  // background-image: url("/images/assets/turnkey.svg");
   background: var(--Gradients-Gradient-7);
   background-size: cover;
   background-position: right;
   border-radius: 50px 50px 0 0;
-  padding: calc(var(--margin-section-xl) / 2);
+  padding: var(--container-padding-xl-side);
 
   max-width: var(--container-width);
   margin: var(--margin-section-xl) auto;
@@ -15,26 +14,32 @@
   @media (max-width: 992px) {
     row-gap: var(--row-gap-content-lg);
     margin: var(--margin-section-lg) auto;
-    padding: calc(var(--margin-section-lg) / 2);
+    // padding: calc(var(--margin-section-lg) / 2);
+    padding: var(--container-padding-lg-side);
   }
 
   @media (max-width: 768px) {
     border-radius: 0;
     row-gap: var(--row-gap-content-md);
     margin: var(--margin-section-md) auto;
-    padding: calc(var(--margin-section-md) / 2);
+    // padding: calc(var(--margin-section-md) / 2);
+    padding: var(--container-padding-md-side);
   }
 
   @media (max-width: 576px) {
     row-gap: var(--row-gap-content-sm);
     margin: var(--margin-section-sm) auto;
-    padding: calc(var(--margin-section-sm) / 2);
+    // padding: calc(var(--margin-section-xs) / 2);
+    padding: calc(var(--container-padding-xs-side) * 2)
+      var(--container-padding-xs-side);
   }
 
   @media (max-width: 375px) {
     row-gap: var(--row-gap-content-xs);
     margin: var(--margin-section-xs) auto;
-    padding: calc(var(--margin-section-xs) / 2);
+    // padding: calc(var(--margin-section-xs) / 2);
+    padding: calc(var(--container-padding-xs-side) * 2)
+      var(--container-padding-xs-side);
   }
 
   .top {
