--- a/src/widgets/turnkey/top/UI/styles.module.scss
+++ b/src/widgets/turnkey/top/UI/styles.module.scss
@@ -28,6 +28,12 @@
     margin-top: calc(var(--margin-section-xs) / 2);
     margin-bottom: var(--margin-section-xs);
   }
+  // .price__list{
+  //   @media (max-width: 992px) {
+  //     overflow: hidden;
+  //     margin: 0 calc(0px - var(--container-padding-xs-side));
+  //   }
+  // }
 
   .title {
     display: grid;
