--- a/src/entities/wallet/ui/history/UI/styles.module.scss
+++ b/src/entities/wallet/ui/history/UI/styles.module.scss
@@ -88,7 +88,7 @@
 
     .right {
       display: grid;
-      justify-content: flex-end;
+      justify-content: end;
       align-items: center;
       transform: rotate(90deg);
     }
