--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -36,15 +36,32 @@
       grid-auto-flow: row;
 
       &__row {
+        position: relative;
         display: grid;
         grid-template: 1fr / 1fr 1fr;
         padding: 5px;
         justify-content: center;
         border-radius: 25px;
-        border: 0.1px solid var(--Personal-colors-main);
         margin: 15px 10px;
+        box-shadow: inset 0px 0px 5px 1px rgba($color: #4772e6, $alpha: 0.5);
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 2px;
+          left: 2px;
+          width: calc(50% - 2px);
+          height: calc(100% - 4px);
+          border-radius: 20px;
+          background: var(--Gradients-Gradient-1);
+          transition: transform 0.4s ease;
+          z-index: 0;
+          transform: translateX(0%);
+        }
 
         p {
+          position: relative;
+          z-index: 1;
           text-align: center;
           min-width: 150px;
           font-size: 18px;
@@ -56,11 +73,28 @@
           align-items: center;
           align-self: stretch;
           border-radius: 20px;
+          cursor: pointer;
+          transition: color 0.4s ease;
+
+          @media (max-width: 576px) {
+            font-size: 16px;
+          }
+
+          @media (max-width: 380px) {
+            font-size: 14px;
+          }
         }
 
         .active {
-          background: var(--Gradients-Gradient-1);
           color: var(--Personal-colors-White);
+        }
+
+        &.active_advertiser::before {
+          transform: translateX(0%);
+        }
+
+        &.active_blogger::before {
+          transform: translateX(100%);
         }
       }
 
@@ -218,21 +252,3 @@
     transform: rotate(-45deg);
   }
 }
-
-// @keyframes slideIn {
-//   from {
-//     transform: translateX(-100%);
-//   }
-//   to {
-//     transform: translateX(0);
-//   }
-// }
-
-// @keyframes slideOut {
-//   from {
-//     transform: translateX(0);
-//   }
-//   to {
-//     transform: translateX(-100%);
-//   }
-// }
