--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -43,6 +43,22 @@ body {
       backdrop-filter: blur(3px);
     }
   }
+
+  &.sidebar-open-2 {
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      transition: opacity 1s ease-in;
+      backdrop-filter: blur(3px);
+    }
+  }
 }
 
 main {
