--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -17,13 +17,11 @@
       padding: 10px;
     }
 
-    // padding: 25px 0px;
     height: 100%;
     position: fixed;
     top: 0;
-    left: 0; /* Скрываем за пределами экрана */
+    left: 0;
 
-    // border: 1px solid var(--black-10);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 10;
 
@@ -43,20 +41,26 @@
         justify-content: center;
         border-radius: 25px;
         margin: 15px 10px;
-        box-shadow: inset 0px 0px 5px 1px rgba($color: #4772e6, $alpha: 0.5);
+        box-shadow: inset 0px 0px 5px 1px rgba($color: #4772e6, $alpha: 0.3);
+        overflow: hidden;
+        // border: 1px solid rgba($color: #4772e6, $alpha: 0.8);
+        background: rgba($color: #4772e6, $alpha: 0.1);
 
         &::before {
           content: "";
           position: absolute;
-          top: 2px;
-          left: 2px;
-          width: calc(50% - 2px);
-          height: calc(100% - 4px);
+          top: 1px;
+          left: 1px;
+          width: calc(50% - 1px);
+          height: calc(100% - 2px);
           border-radius: 20px;
-          background: var(--Gradients-Gradient-1);
-          transition: transform 0.4s ease;
+          // background: var(--Gradients-Gradient-1);
+          background: #fff;
+          box-shadow: 1px 1px 15px rgba($color: #000, $alpha: 0.3);
+          transition: transform 0.3s ease;
           z-index: 0;
           transform: translateX(0%);
+          // border: 1.5px solid rgba($color: #4772e6, $alpha: 0.4);
         }
 
         p {
@@ -65,7 +69,6 @@
           text-align: center;
           min-width: 150px;
           font-size: 18px;
-          font-style: normal;
           font-weight: 500;
           line-height: 0.75;
           padding: 10px;
@@ -74,7 +77,7 @@
           align-self: stretch;
           border-radius: 20px;
           cursor: pointer;
-          transition: color 0.4s ease;
+          transition: color 0.4s ease-in;
 
           @media (max-width: 576px) {
             font-size: 16px;
@@ -86,7 +89,12 @@
         }
 
         .active {
-          color: var(--Personal-colors-White);
+          color: var(--Personal-colors-main);
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
         }
 
         &.active_advertiser::before {
