--- a/src/entities/wallet/ui/legal/UI/styles.module.scss
+++ b/src/entities/wallet/ui/legal/UI/styles.module.scss
@@ -3,16 +3,33 @@
   grid-template: 1fr / 1fr 0.1fr;
   column-gap: 10px;
   justify-content: space-between;
-  padding: 30px;
+  align-content: center;
+  padding: 15px 30px;
   align-items: center;
   border-radius: 12px;
-  border: 1px solid var(--Containers);
+  // border: 1px solid var(--Containers);
+  box-shadow: 0 0 2px var(--Containers);
   background: var(--Personal-colors-White);
   cursor: pointer;
-}
+  height: 80px;
 
-.active__account {
-  border: 1px solid var(--Personal-colors-main);
+  @media (max-width: 992px) {
+    padding: 20px 25px;
+    // border: none;
+    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  &.active__account {
+    span,
+    p {
+      color: var(--Personal-colors-main) !important;
+    }
+
+    box-shadow: 0 0 2px var(--Personal-colors-main);
+    @media (max-width: 992px) {
+      box-shadow: 0px 0.5px 10px 0.5px var(--Personal-colors-main);
+    }
+  }
 }
 
 .content {
@@ -47,26 +64,29 @@
   align-items: center;
   justify-content: center;
 
-  .outer {
+  div {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3px;
     border-radius: 50%;
-    border: 0.2px solid #000;
+    box-shadow: 0 0 0 0.2px #000;
+  }
+
+  .outer {
+    padding: 3px;
 
     .inner {
-      display: flex;
-      align-items: center;
-      justify-content: center;
       width: 16px;
       height: 16px;
-      border-radius: 50%;
-      border: 0.2px solid #000;
     }
   }
-}
-
-.active {
-  background: var(--Gradients-Gradient-1);
+  &.active {
+    .outer {
+      box-shadow: 0 0 0 0.2px var(--Personal-colors-main);
+    }
+    .inner {
+      box-shadow: none;
+      background: var(--Gradients-Gradient-1);
+    }
+  }
 }
