--- a/src/features/other/barSubfilter/UI/styles.module.scss
+++ b/src/features/other/barSubfilter/UI/styles.module.scss
@@ -1,7 +1,9 @@
 .types {
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: 0 0 0 1px inset var(--Personal-colors-main);
+  // box-shadow: 0 0 0 1px inset var(--Personal-colors-main);
+  background: var(--Personal-colors-White);
+  box-shadow: inset 0px 0px 5px 1px rgba($color: #4772e6, $alpha: 0.5);
 
   .profile {
     display: flex; /* Используем flex контейнер */
@@ -24,7 +26,9 @@
   }
 
   .catalog {
-    display: flex; /* Используем flex контейнер */
+    display: grid;
+    grid-template: 1fr / repeat(var(--lengthFilter), 1fr);
+    position: relative;
     align-items: center;
     justify-content: center;
     font-size: 14px;
@@ -32,23 +36,41 @@
     font-weight: 500;
     line-height: normal;
     line-height: 0.75;
-    color: var(--Personal-colors-main);
 
-    @media (max-width: 375px) {
+    @media (max-width: 576px) {
       font-size: 10px;
     }
 
+    z-index: 1;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: calc(100% / var(--lengthFilter) - 2px);
+      height: calc(100% - 4px);
+      border-radius: 18px;
+      background: var(--Gradients-Gradient-1);
+      transition: transform 0.4s ease;
+      z-index: -1;
+      transform: translateX(var(--translateFilter));
+    }
+
+    .active {
+      color: var(--Personal-colors-White) !important;
+    }
     li {
+      color: var(--Personal-colors-main);
       text-align: center;
       padding: 20px 10px;
       cursor: pointer;
       flex: 1; /* Равномерно распределить пространство между элементами */
       white-space: nowrap;
+
+      @media (max-width: 576px) {
+        padding: 12px 10px;
+      }
     }
   }
-}
-
-.active {
-  background: var(--Gradients-Gradient-1);
-  color: var(--Personal-colors-White);
 }
