--- a/src/features/other/priceList/UI/styles.module.scss
+++ b/src/features/other/priceList/UI/styles.module.scss
@@ -17,30 +17,30 @@
   // }
 }
 
-.carousel {
-  overflow: hidden;
+// .carousel {
+//   overflow: hidden;
 
-  @media (max-width: 992px) {
-    margin: 0 calc(0px - var(--container-padding-lg-side));
-  }
+//   @media (max-width: 992px) {
+//     margin: 0 calc(0px - var(--container-padding-lg-side));
+//   }
 
-  @media (max-width: 768px) {
-    margin: 0 calc(0px - var(--container-padding-md-side));
-  }
+//   @media (max-width: 768px) {
+//     margin: 0 calc(0px - var(--container-padding-md-side));
+//   }
 
-  @media (max-width: 576px) {
-    margin: 0 calc(0px - var(--container-padding-sm-side));
-  }
+//   @media (max-width: 576px) {
+//     margin: 0 calc(0px - var(--container-padding-sm-side));
+//   }
 
-  @media (max-width: 375px) {
-    margin: 0 calc(0px - var(--container-padding-xs-side));
-  }
+//   @media (max-width: 375px) {
+//     margin: 0 calc(0px - var(--container-padding-xs-side));
+//   }
 
-  .wrapper {
-    display: grid;
-    grid-auto-flow: column;
-  }
-}
+//   .wrapper {
+//     display: grid;
+//     grid-auto-flow: column;
+//   }
+// }
 
 .active {
   filter: none;
