--- a/src/features/wallet/barSubprofileFilter/UI/styles.module.scss
+++ b/src/features/wallet/barSubprofileFilter/UI/styles.module.scss
@@ -20,30 +20,41 @@
       font-weight: 500;
       white-space: nowrap;
     }
+
+    .active__type {
+      color: var(--Personal-colors-main);
+    }
   }
 }
 
 .circle_wrapper {
   display: grid;
   align-items: center;
+  justify-content: center;
 
-  .outer {
+  div {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3px;
     border-radius: 50%;
-    border: 0.2px solid #000;
+    box-shadow: 0 0 0 0.2px #000;
+  }
+
+  .outer {
+    padding: 3px;
 
     .inner {
       width: 16px;
       height: 16px;
-      border-radius: 50%;
-      border: 0.2px solid #000;
     }
   }
-}
-
-.active {
-  background: var(--Gradients-Gradient-1);
+  &.active {
+    .outer {
+      box-shadow: 0 0 0 0.2px var(--Personal-colors-main);
+    }
+    .inner {
+      box-shadow: none;
+      background: var(--Gradients-Gradient-1);
+    }
+  }
 }
