--- a/src/features/wallet/legalForm/UI/styles.module.scss
+++ b/src/features/wallet/legalForm/UI/styles.module.scss
@@ -2,15 +2,23 @@
   display: grid;
   grid-auto-flow: row;
   align-items: center;
-  text-align: center;
   row-gap: 20px;
 
-  p {
+  .title {
     color: var(--Personal-colors-black);
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    text-align: left;
+
+    @media (max-width: 992px) {
+      font-size: 18px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -24,7 +32,8 @@
 
 .row {
   display: grid;
-  grid-template: 1fr 1fr / 1fr;
+  grid-auto-flow: row;
+  row-gap: 5px;
   width: 100%;
   column-gap: 20px;
 }
@@ -50,8 +59,17 @@
     color: var(--Personal-colors-black);
     font-size: 14px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
+    padding-left: 10px;
+
+    @media (max-width: 992px) {
+      font-size: 16px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 12px;
+    }
   }
 }
 
@@ -60,12 +78,22 @@
 
   .input {
     width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    color: #555;
+    padding: 10px 20px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 10px;
     transition: border-color 0.5s;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    @media (max-width: 992px) {
+      font-size: 16px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 12px;
+    }
 
     &::placeholder {
       color: rgba(0, 0, 0, 0.3);
