--- a/src/features/wallet/paymentDidox/UI/styles.module.scss
+++ b/src/features/wallet/paymentDidox/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .button {
-  border-radius: 8px;
-  padding: 10px;
+  // border-radius: 8px;
+  // padding: 10px;
 
   font-size: 14px;
   font-style: normal;
