--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -50,13 +50,13 @@
           position: absolute;
           top: 2px;
           left: 2px;
-          width: calc(50% - 2px);
+          width: calc(var(--widthRole) - 2px);
           height: calc(100% - 4px);
           border-radius: 20px;
           background: var(--Gradients-Gradient-1);
           transition: transform 0.4s ease;
           z-index: 0;
-          transform: translateX(0%);
+          transform: translateX(var(--translateRole));
         }
 
         p {
@@ -89,13 +89,13 @@
           color: var(--Personal-colors-White);
         }
 
-        &.active_advertiser::before {
-          transform: translateX(0%);
-        }
+        // &.active_advertiser::before {
+        //   transform: translateX(0%);
+        // }
 
-        &.active_blogger::before {
-          transform: translateX(100%);
-        }
+        // &.active_blogger::before {
+        //   transform: translateX(100%);
+        // }
       }
 
       .accordion__block {
