--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -41,6 +41,7 @@ body {
       background: rgba(0, 0, 0, 0.5);
       transition: opacity 1s ease-in;
       backdrop-filter: blur(3px);
+      z-index: 5;
     }
   }
 
@@ -57,6 +58,7 @@ body {
       background: rgba(0, 0, 0, 0.5);
       transition: opacity 1s ease-in;
       backdrop-filter: blur(3px);
+      z-index: 5;
     }
   }
 }
@@ -524,4 +526,29 @@ main {
 .hyperlink {
   color: rgb(48, 117, 202);
   text-decoration: underline;
+}
+
+.swipper__carousel {
+  overflow: hidden;
+
+  @media (max-width: 992px) {
+    margin: 0 calc(0px - var(--container-padding-lg-side));
+  }
+
+  @media (max-width: 768px) {
+    margin: 0 calc(0px - var(--container-padding-md-side));
+  }
+
+  @media (max-width: 576px) {
+    margin: 0 calc(0px - var(--container-padding-sm-side));
+  }
+
+  @media (max-width: 375px) {
+    margin: 0 calc(0px - var(--container-padding-xs-side));
+  }
+
+  .swipper__wrapper {
+    display: grid;
+    grid-auto-flow: column;
+  }
 }
