--- a/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
@@ -1,6 +1,27 @@
 .guide {
   padding: 30px;
   border-radius: 20px;
-  border: 2px dashed #4772e6;
+  border: 2px dashed var(--Personal-colors-main);
   background: var(--Personal-colors-White);
+  box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
+  @media (max-width: 992px) {
+    padding: 15px;
+    border-radius: 15px;
+  }
+
+  p {
+    color: var(--Personal-colors-black);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+    @media (max-width: 992px) {
+      font-size: 12px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 10px;
+    }
+  }
 }
