--- a/src/widgets/wallet/transactions/components/legalsList/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/legalsList/UI/styles.module.scss
@@ -4,12 +4,24 @@
   row-gap: 20px;
   align-items: start;
 
+  @media (max-width: 992px) {
+    row-gap: unset;
+  }
+
   .title {
     color: var(--Personal-colors-black);
-    font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
+    font-size: 22px;
+
+    @media (max-width: 992px) {
+      font-size: 18px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 12px;
+    }
   }
 
   .empty {
@@ -24,6 +36,25 @@
       text-align: center;
       color: rgba(0, 0, 0, 0.5);
     }
+
+    &.mini {
+      background-color: var(--Personal-colors-White);
+      padding: 10px 15px;
+      box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 20px;
+      margin: 20px 0;
+      font-size: 15px;
+      grid-auto-flow: column;
+      justify-content: center;
+      column-gap: 20px;
+      height: 80px;
+      justify-self: center;
+
+      svg {
+        width: 60px;
+        height: 60px;
+      }
+    }
   }
 }
 
@@ -34,8 +65,7 @@
   align-items: center;
   padding: 30px;
   border-radius: 25px;
-  border: 1px solid #bdbdbd;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   background: var(--Personal-colors-White);
 }
 
