--- a/src/widgets/wallet/transactions/components/paymentData/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/paymentData/UI/styles.module.scss
@@ -3,10 +3,24 @@
   grid-auto-flow: row;
   row-gap: 30px;
   border-radius: 40px;
-  border: 1px solid var(--Inside-container);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   background: var(--Personal-colors-White);
   padding: 50px;
-  // width: 100%;
+
+  @media (max-width: 992px) {
+    border-radius: 40px;
+    padding: 40px;
+  }
+
+  @media (max-width: 768px) {
+    border-radius: 30px;
+    padding: 30px;
+  }
+
+  @media (max-width: 576px) {
+    border-radius: 20px;
+    padding: 15px;
+  }
 }
 
 .block {
@@ -19,6 +33,23 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
+
+  .title {
+    color: var(--Personal-colors-black);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-align: left;
+
+    @media (max-width: 992px) {
+      font-size: 18px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 16px;
+    }
+  }
 
   .error {
     &::placeholder {
@@ -35,7 +66,7 @@
     margin-bottom: 10px;
   }
   span {
-    color: var(--choosen-text, #808080);
+    color: #ccc;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -44,19 +75,29 @@
 
   div {
     display: grid;
+    align-items: center;
     grid-template: 1fr / 1fr minmax(20px, 30px);
     gap: 10px;
-    padding: 15px 30px;
-    border-radius: 12px;
-    border: 1px solid var(--Inside-container, #bdbdbd);
-    background: var(--Personal-colors-White, #fff);
+    border-radius: 10px;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    background: var(--Personal-colors-White);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 
-    small {
-      color: var(--Text-sample, #a3a0a0);
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
+    @media (max-width: 992px) {
+      font-size: 16px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 12px;
+    }
+    input {
+      &::placeholder {
+        color: rgba(0, 0, 0, 0.3);
+      }
     }
   }
 }
