--- a/src/widgets/wallet/transactions/topup/UI/creditCard/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/topup/UI/creditCard/UI/styles.module.scss
@@ -12,14 +12,21 @@
     justify-content: center;
     padding: 30px 50px;
     border-radius: 25px;
-    border: 1px solid #bdbdbd;
     background: var(--Personal-colors-White, #fff);
-    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+
+    @media (max-width: 576px) {
+      padding: 15px;
+    }
   }
 
   .icon {
     display: grid;
     justify-content: center;
+
+    @media (max-width: 576px) {
+      display: none;
+    }
 
     svg {
       width: 130px;
@@ -43,15 +50,18 @@
         font-style: normal;
         font-weight: 600;
         line-height: 0.75;
+
+        @media (max-width: 576px) {
+          text-align: center;
+        }
       }
 
       div {
         display: grid;
-        grid-auto-flow: column;
+        grid-template: 1fr / 1fr 1fr;
         column-gap: 20px;
 
         .payment_item {
-          width: 240px;
           height: 96px;
           border: 0.5px solid rgba(0, 0, 0, 0.25);
           border-radius: 12px;
@@ -79,6 +89,10 @@
         font-style: normal;
         font-weight: 600;
         line-height: 0.75;
+
+        @media (max-width: 576px) {
+          text-align: center;
+        }
       }
 
       span {
@@ -122,6 +136,11 @@
       border: 1px dashed #4772e6;
       background: var(--Personal-colors-White);
 
+      @media (max-width: 576px) {
+        column-gap: 10px;
+        padding: 25px 15px;
+      }
+
       .conditions__right {
         svg {
           width: 20px;
@@ -134,12 +153,21 @@
         grid-auto-flow: row;
         row-gap: 10px;
 
+        @media (max-width: 576px) {
+          row-gap: 5px;
+        }
+
         div {
           p {
             color: var(--Sub-text, #4d4d4d);
             font-size: 14px;
             font-style: normal;
             font-weight: 500;
+            line-height: 1;
+
+            @media (max-width: 576px) {
+              font-size: 10px;
+            }
           }
         }
       }
@@ -171,12 +199,16 @@
         font-weight: 600;
         line-height: 0.75;
       }
+      @media (max-width: 576px) {
+        row-gap: 10px;
+        p {
+          font-size: 18px;
+        }
+        span {
+          font-size: 22px;
+        }
+      }
     }
-  }
-
-  .button {
-    display: grid;
-    justify-content: stretch;
   }
 }
 
