--- a/src/widgets/cart/UI/styles.module.scss
+++ b/src/widgets/cart/UI/styles.module.scss
@@ -12,7 +12,7 @@
     margin-bottom: var(--margin-section-lg);
     grid-template: none;
     grid-auto-flow: row;
-    row-gap: 15px;
+    row-gap: 25px;
   }
 
   @media (max-width: 768px) {
@@ -36,5 +36,9 @@
     display: grid;
     grid-auto-flow: row;
     row-gap: 50px;
+
+    @media (max-width: 576px) {
+      row-gap: 25px;
+    }
   }
 }
