--- a/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
@@ -139,7 +139,7 @@
         align-items: center;
 
         button {
-          padding: 15px;
+          padding: 15px 5px;
         }
 
         .prev {
