--- a/src/widgets/wallet/transactions/components/legalsList/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/legalsList/UI/styles.module.scss
@@ -28,11 +28,13 @@
     display: grid;
     row-gap: 20px;
     justify-content: center;
+    justify-items: center;
     align-items: center;
 
     &__text {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 500;
+      line-height: 1;
       text-align: center;
       color: rgba(0, 0, 0, 0.5);
     }
@@ -45,10 +47,9 @@
       margin: 20px 0;
       font-size: 15px;
       grid-auto-flow: column;
-      justify-content: center;
+      justify-content: flex-start;
       column-gap: 20px;
       height: 80px;
-      justify-self: center;
 
       svg {
         width: 60px;
