feat: match, dropdown menu, dynamic pagination disabled

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -16,18 +16,14 @@
       rgba(255, 255, 255, 0.2) 0%,
       rgba(125, 117, 117, 0) 100%
     ),
-    linear-gradient(90deg, #ff2f66 0%, rgba(254, 110, 48, 0.99) 100%);
+    linear-gradient(90deg, #ff2f66 0%, rgba(254, 110, 48, 0.988) 100%);
   --Gradients-Gradient-4: linear-gradient(
     63deg,
     #ffca28 0%,
     rgba(254, 110, 48, 0.99) 83.33%
   );
   --Gradients-Gradient-5: linear-gradient(90deg, #314479 0%, #51377a 100%);
-  --Gradients-Gradient-6: linear-gradient(
-    37deg,
-    #ffef28 0%,
-    rgba(254, 52, 48, 0.99) 71.43%
-  );
+  --Gradients-Gradient-6: linear-gradient(37deg, #ffef28 0%, #fe3430fc 71.43%);
   --Gradients-Gradient-7: linear-gradient(
     45deg,
     rgba(71, 114, 230, 0.1) 23.91%,
