--- a/src/widgets/catalog/components/catalogCart/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogCart/UI/styles.module.scss
@@ -4,7 +4,7 @@
   column-gap: 40px;
   padding: 20px 15px;
   background: var(--Gradients-Gradient-1);
-  opacity: 0.95;
+  // opacity: 0.95;
   border-radius: 15px;
 
   @media (max-width: 992px) {
